# ChromaRenderer

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  BUILD.bazel  README.md  WORKSPACE  appveyor.yml  build.cmd
.github/workflows/: main.yml
ChromaRenderer/: BUILD.bazel  ChromaRenderer.sln  WORKSPACE
ChromaRenderer/ChromaRenderer/: BUILD.bazel  ChromaRenderer.vcxproj  ChromaRenderer.vcxproj.filters
ChromaRenderer/ChromaRenderer/src/: ChromaGUIUtils.cpp  ChromaGui.h  CommonFileDialogApp.h  Dialogs.h  main.cpp
ChromaRenderer/ChromaRendererCore/: ChromaRendererCore.vcxproj  ChromaRendererCore.vcxproj.filters
ChromaRenderer/ChromaRendererCore/shaders/: convergence.glsl
ChromaRenderer/ChromaRendererCore/src/: BoundingBox.h  Camera.h  ChromaRenderer.cpp  CudaPathTracer.cpp  CudaPathTracer.h  CudaPathTracerKernel.cu  CudaPathTracerKernel.h  CudaUtils.cu  CudaUtils.h  GlslProgram.h  ISpacePartitioningStructure.h  Image.h  Intersection.h  KDTree.cpp  KDTree.h  Material.h  Mesh.cpp  ModelImporter.cpp  Object.h  PathTracing.cpp  RTUtils.cpp  RTUtils.h  Ray.cpp  RendererSettings.cpp  RendererSettings.h  Scene.h  Stopwatch.cpp
ChromaRenderer/ChromaRendererCoreTests/: ChromaRendererCoreTests.vcxproj  ChromaRendererCoreTests.vcxproj.filters
ChromaRenderer/ChromaRendererCoreTests/src/: test.cpp
ChromaRenderer/extlibs/: BUILD.bazel
ChromaRenderer/extlibs/headers/glad/include/glad/: glad.h
ChromaRenderer/extlibs/headers/glad/src/: glad.c
ChromaRenderer/extlibs/libs/Release/: assimp-vc141-mt.lib
ChromaRenderer/src/: ChromaGUIUtils.cpp  ChromaGUIUtils.h  ChromaGui.cpp  ChromaGui.h  CommonFileDialogApp.h  main.cpp
ChromaRendererCore/: BUILD.bazel
ChromaRendererCore/src/: BVH.cpp  BVH.h  Benchmark.cpp  Benchmark.h  Camera.cpp  Camera.h  ChromaRenderer.cpp  ChromaRenderer.h  Color.cpp  Color.h  Config.h  CudaPathTracer.cpp  CudaPathTracer.h  CudaPathTracerKernel.cu  CudaPathTracerKernel.h  CudaUtils.cu  CudaUtils.h  GlslProgram.cpp  GlslProgram.h  IIntersectable.h  IRenderer.h  ISpacePartitioningStructure.h  Image.cpp  Image.h  KDTree.cpp  KDTree.h  Material.h  Mesh.cpp  Mesh.h  ModelImporter.cpp  ModelImporter.h  Object.cpp  Object.h  PathTracing.cpp  PathTracing.h  RTUtils.cpp  Ray.cpp  Ray.h  RayCasting.cpp  RayCasting.h  (+10 more)
chroma-renderer/: BUILD.bazel
chroma-renderer-core/: BUILD.bazel
chroma-renderer-core/shaders/: convergence.glsl
chroma-renderer-core/src/: BVH.cpp  Camera.cpp  Camera.h  ChromaRenderer.cpp  ChromaRenderer.h  Color.h  Config.h  CudaPathTracer.cpp  CudaUtils.h  GlslProgram.h  IRenderer.h  ISpacePartitioningStructure.h  Image.cpp  Intersection.h  Mesh.cpp  Mesh.h  ModelImporter.cpp  Object.cpp  Object.h  PathTracing.cpp  RTUtils.cpp  RTUtils.h  RayCasting.h  RendererSettings.cpp  RendererSettings.h  Scene.cpp  Stopwatch.cpp  ThreadPool.cpp  ThreadPool.h  Triangle.h
chroma-renderer/core/renderer/: BUILD.bazel  Benchmark.cpp  ChromaRenderer.cpp  ChromaRenderer.h  CudaPathTracer.cpp  CudaPathTracer.h  CudaPathTracerKernel.cu  CudaPathTracerKernel.h  CudaPathTracerKernelTypes.h  CudaPathTracerKernelUtils.h  CudaUtils.cu  CudaUtils.h  GlslProgram.cpp  GlslProgram.h  IRenderer.h  OpenGlErrorCheck.h  PathTracing.cpp  PathTracing.h  PostProcessor.cpp  PostProcessor.h  RayCasting.cpp  RayCasting.h  RendererSettings.cpp  RendererSettings.h  ThreadPool.cpp  chroma_renderer.cpp  chroma_renderer.h  cuda_path_tracer.cpp  cuda_path_tracer.h  cuda_path_tracer_kernel.cu  cuda_path_tracer_kernel.h  cuda_path_tracer_kernel_utils.h  post_processor.cpp  post_processor.h  renderer_settings.cpp  renderer_settings.h
chroma-renderer/core/renderer/test/: CudaPathTracerKernelUtils_test.cpp  cuda_path_tracer_kernel_utils_test.cpp
chroma-renderer/core/scene/: BUILD.bazel  Camera.cpp  Camera.h  ModelImporter.cpp  ModelImporter.h  Object.cpp  Object.h  Scene.cpp  Scene.h  camera.cpp  camera.h  model_importer.cpp  model_importer.h  scene.cpp  scene.h
chroma-renderer/core/space-partition/: BUILD.bazel  BVH.cpp  BVH.h  IIntersectable.h  ISpacePartitioningStructure.h  KDTree.cpp  KDTree.h  bvh.cpp  bvh.h  i_space_partitioning_structure.h
chroma-renderer/core/types/: BUILD.bazel  BoundingBox.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Face.h  Image.cpp  Image.h  Intersection.h  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Ray.cpp  Ray.h  RendererSettings.cpp  Triangle.h  bounding_box.h  color.cpp  distribution.cpp  distribution.h  environment_map.cpp  environment_map.h  image.cpp  image.h  material.h  mesh.cpp  mesh.h  triangle.h
chroma-renderer/core/types/test/: distribution-test.cpp
chroma-renderer/core/utility/: BUILD.bazel  Benchmark.cpp  Benchmark.h  GlslProgram.cpp  GlslProgram.h  IRenderer.h  RTUtils.cpp  RTUtils.h  Stopwatch.cpp  Stopwatch.h  ThreadPool.cpp  floating_point_equality.h  glsl_program.cpp  stopwatch.cpp  stopwatch.h
chroma-renderer/core/utility/test/: floating_point_equality_test.cpp
chroma-renderer/gui/: BUILD.bazel  ChromaGUIUtils.cpp  ChromaGUIUtils.h  ChromaGui.cpp  ChromaGui.h  CommonFileDialogApp.h  chroma_gui.cpp  chroma_gui.h  chroma_gui_utils.cpp  chroma_gui_utils.h  main.cpp
chroma-renderer/shaders/: BUILD.bazel  convergence.glsl
chroma-renderer/src/: ChromaGUIUtils.cpp  ChromaGui.cpp  ChromaGui.h  Dialogs.h  main.cpp
extlibs/cuda/: cuda_library.bzl
extlibs/headers/cuda-helpers/: helper_cuda.h
extlibs/headers/glm/gtx/: dual_quaternion.hpp
extlibs/headers/imgui/: imconfig.h
extlibs/libs/Debug/: glfw3.lib
extlibs/libs/Release/: glfw3.lib
resources/: BUILD.bazel
scripts/: build.cmd  build.sh  file_naming.py  format.py  formatting-checks.sh  install_deps.sh
