package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "chroma-renderer",
    srcs = glob([
        "src/*.cpp",
        "src/*.h",
    ]),
    data = [
        "//ChromaRendererCore:shaders",
        "//resources:fonts",
    ],
    includes = ["src"],
    linkopts = select({
        "//:on_linux": ["-lstdc++fs"],
        "//:on_windows": [],
    }),
    deps = [
        "//ChromaRendererCore:chroma-renderer-core",
        "//third_party/nfd",
    ],
)
