load("//third_party/cuda:cuda_library.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "chroma-renderer-core",
    srcs = glob(["src/*.cpp"]) + [":path-tracer-kernel"],
    hdrs = glob(["src/*.h"]),
    includes = ["src"],
    linkstatic = True,
    deps = [
        "//third_party/assimp",
        "//third_party/cuda-helpers",
        "//third_party/glad",
        "//third_party/glfw",
        "//third_party/glm",
        "//third_party/imgui",
        "//third_party/stb:stb-image",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
    ],
)

cuda_library(
    name = "path-tracer-kernel",
    srcs = ["src/CudaPathTracerKernel.cu"],
    hdrs = ["src/CudaPathTracerKernel.h"],
    deps = ["//third_party/cuda-helpers"],
)

filegroup(
    name = "shaders",
    srcs = ["shaders/convergence.glsl"],
)
