package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "chroma-renderer",
    srcs = glob([
        "src/*.cpp",
        "src/*.h",
    ]),
    data = [
        "//chroma-renderer-core:shaders",
        "//resources:fonts",
    ],
    includes = ["src"],
    linkopts = select({
        "//:on_linux": ["-lstdc++fs"],
        "//:on_windows": [],
    }),
    deps = [
        "//chroma-renderer-core",
        "//third-party/nfd",
    ],
)
