load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "gui",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    data = [
        "//chroma-renderer/resources/fonts",
        "//chroma-renderer/shaders",
    ],
    deps = [
        "//chroma-renderer/core/renderer",
        "//third-party/argparse",
        "//third-party/nfd",
    ],
)
