load("@rules_cc//cc:defs.bzl", "cc_library")
load("//third-party/cuda:cuda_library.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "renderer",
    srcs = glob(["*.cpp"]) + [":path-tracer-kernel"],
    hdrs = glob(["*.h"]),
    linkstatic = True,
    deps = [
        "//chroma-renderer/core/scene",
        "//chroma-renderer/core/space-partition",
        "//chroma-renderer/core/utility",
        "//third-party/glad",
        "//third-party/glm",
        "//third-party/imgui",
        "//third-party/stb:stb-image",
        "@assimp",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@glfw",
    ],
)

cuda_library(
    name = "path-tracer-kernel",
    srcs = ["CudaPathTracerKernel.cu"],
    hdrs = ["CudaPathTracerKernel.h"],
    deps = ["//third-party/glm"],
)
