load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//third-party/cuda:cuda_library.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "renderer",
    srcs = glob(["*.cpp"]) + [":path-tracer-kernel"],
    hdrs = glob(["*.h"]),
    linkstatic = True,
    deps = [
        "//chroma-renderer/core/scene",
        "//chroma-renderer/core/space-partition",
        "//chroma-renderer/core/utility",
        "//third-party/glad",
        "//third-party/glm",
        "//third-party/imgui",
        "//third-party/stb:stb-image",
        "@assimp",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@glfw",
    ],
)

cuda_library(
    name = "path-tracer-kernel",
    srcs = ["CudaPathTracerKernel.cu"],
    hdrs = [
        "CudaPathTracerKernel.h",
        "CudaPathTracerKernelTypes.h",
        "CudaPathTracerKernelUtils.h",
    ],
    deps = ["//third-party/glm"],
)

cc_test(
    name = "cuda-path-tracer-kernel-test",
    srcs = [
        "CudaPathTracerKernel.h",
        "CudaPathTracerKernelTypes.h",
        "CudaPathTracerKernelUtils.h",
        "test/CudaPathTracerKernelUtils_test.cpp",
    ],
    deps = [
        ":path-tracer-kernel",
        "//third-party/glm",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@googletest//:gtest_main",
    ],
)
