load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//third-party/cuda:cuda_library.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "renderer",
    srcs = glob(["*.cpp"]) + [":path-tracer-kernel"],
    hdrs = [
        "chroma_renderer.h",
        "cuda_path_tracer.h",
        "cuda_path_tracer_kernel.h",
        "cuda_path_tracer_kernel_types.h",
        "opengl_error_check.h",
        "post_processor.h",
        "renderer_settings.h",
    ],
    linkstatic = True,
    deps = [
        "//chroma-renderer/core/scene",
        "//chroma-renderer/core/space-partition",
        "//chroma-renderer/core/utility",
        "//third-party/glad",
        "//third-party/glm",
        "//third-party/imgui",
        "//third-party/stb:stb-image",
        "@assimp",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@glfw",
    ],
)

cuda_library(
    name = "path-tracer-kernel",
    srcs = ["cuda_path_tracer_kernel.cu"],
    hdrs = [
        "cuda_path_tracer_kernel.h",
        "cuda_path_tracer_kernel_types.h",
        "cuda_path_tracer_kernel_utils.h",
    ],
    deps = ["//third-party/glm"],
)

cc_test(
    name = "cuda-path-tracer-kernel-test",
    srcs = [
        "cuda_path_tracer_kernel.h",
        "cuda_path_tracer_kernel_types.h",
        "cuda_path_tracer_kernel_utils.h",
        "test/cuda_path_tracer_kernel_utils_test.cpp",
    ],
    deps = [
        ":path-tracer-kernel",
        "//third-party/glm",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@googletest//:gtest_main",
    ],
)
