load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "space-partition",
    srcs = [
        "BVH.cpp",
        "KDTree.cpp",
    ],
    hdrs = [
        "BVH.h",
        "IIntersectable.h",
        "ISpacePartitioningStructure.h",
        "KDTree.h",
    ],
    deps = [
        "//chroma-renderer/core/types",
        "//chroma-renderer/core/utility",
    ],
)
