load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "space-partition",
    srcs = ["bvh.cpp"],
    hdrs = [
        "bvh.h",
        "i_space_partitioning_structure.h",
    ],
    deps = [
        "//chroma-renderer/core/types",
        "//chroma-renderer/core/utility",
    ],
)
