load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "types",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    deps = [
        "//third-party/glad",
        "//third-party/glm",
        "@assimp",
    ],
)

cc_test(
    name = "types-test",
    srcs = glob(["test/*.cpp"]),
    deps = [
        ":types",
        "@googletest//:gtest_main",
    ],
)
