load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utility",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    deps = [
        "//chroma-renderer/core/scene",
        "//chroma-renderer/core/types",
        "//third-party/glad",
        "//third-party/glm",
    ],
)
