load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utility",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    deps = [
        "//third-party/glad",
        "//third-party/glm",
    ],
)

cc_test(
    name = "utility-test",
    srcs = glob(["test/*.cpp"]),
    deps = [
        ":utility",
        "@googletest//:gtest_main",
    ],
)
